[gd_scene load_steps=10 format=3 uid="uid://t8h8ev5w8iud"]

[ext_resource type="Script" path="res://Game/Core/Card/Core_Card.gd" id="1_artrx"]
[ext_resource type="Curve" uid="uid://b3rwhmmpcrvwi" path="res://Global/Curves/Angle_Curve.tres" id="2_4iv8s"]
[ext_resource type="Texture2D" uid="uid://b6gmnjfn5qopy" path="res://assets/Resource_Arts/Resources/cards_atlas.tres" id="3_w8njb"]
[ext_resource type="Script" path="res://Game/Core/draggable_Items/draggable.gd" id="4_jo6ar"]
[ext_resource type="Script" path="res://Game/Core/utils/lerp_follow.gd" id="5_l66e4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ctp5i"]
size = Vector2(70, 100)

[sub_resource type="Animation" id="Animation_fpo18"]
length = 0.001

[sub_resource type="Animation" id="Animation_bpy3q"]
resource_name = "focus"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2o6qs"]
_data = {
"RESET": SubResource("Animation_fpo18"),
"focus": SubResource("Animation_bpy3q")
}

[node name="CoreCard" type="Control"]
custom_minimum_size = Vector2(70, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 70.0
offset_bottom = 100.0
script = ExtResource("1_artrx")
rotation_curve = ExtResource("2_4iv8s")

[node name="Draggable_Item" type="Control" parent="." node_paths=PackedStringArray("visual_node")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_jo6ar")
visual_node = NodePath("../TextureRect")

[node name="ColorRect" type="ColorRect" parent="Draggable_Item"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.802154, 0.129203, 0.452659, 1)

[node name="hover_control" type="Control" parent="Draggable_Item"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="." node_paths=PackedStringArray("to_follow")]
custom_minimum_size = Vector2(70, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_w8njb")
expand_mode = 1
stretch_mode = 5
script = ExtResource("5_l66e4")
to_follow = NodePath("../Draggable_Item")
follow_position_speed = 8.0
follow_rotation_speed = 4.0

[node name="Label" type="Label" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 42.0
offset_right = 6.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "STATE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(70, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.0
offset_right = 35.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -11.5
offset_right = 23.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0792266, 0.684583, 1.92523e-07, 1)
text = "STATE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropPointDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(34, 50)
shape = SubResource("RectangleShape2D_ctp5i")

[node name="card_anime" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2o6qs")
}
speed_scale = 10.0

[connection signal="gui_input" from="Draggable_Item/hover_control" to="Draggable_Item" method="_on_collider_input_event"]
[connection signal="mouse_entered" from="Draggable_Item/hover_control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Draggable_Item/hover_control" to="." method="_on_control_mouse_exited"]
[connection signal="input_event" from="DropPointDetector" to="TextureRect" method="_on_collider_input_event"]
